--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,20 @@ matrix:
   include:
     - language: c
       sudo: false
-      install:
-        - source <(cat install-travis-ci-arduino.sh)
       script:
-        - build_main_platforms
+        - set -v
+        - export ARDUINO_IDE_VERSION="1.8.7"
+        - wget --quiet https://downloads.arduino.cc/arduino-$ARDUINO_IDE_VERSION-linux64.tar.xz
+        - mkdir $HOME/arduino_ide
+        - tar xf arduino-$ARDUINO_IDE_VERSION-linux64.tar.xz -C $HOME/arduino_ide/ 
+        - touch $HOME/arduino_ide/$ARDUINO_IDE_VERSION
+        - export PATH="$HOME/arduino_ide:$PATH"
+        - sudo dpkg --add-architecture i386
+        - sudo apt-get update
+        - sudo apt-get install libc6:i386
+        - curl -fsSL https://www.pjrc.com/teensy/td_145/TeensyduinoInstall.linux64 -o TeensyduinoInstall.linux64
+        - chmod +x TeensyduinoInstall.linux64
+        - ./TeensyduinoInstall.linux64 -dir=$HOME/arduino_ide/arduino
         
 notifications:
   email:
