--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ matrix:
         - /sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_1.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :1 -ac -screen 0 1280x1024x16
         - sleep 3
         - export DISPLAY=:1.0
-        - ./TeensyduinoInstall.linux64 -dir=$HOME/arduino_ide/arduino
+        - ./TeensyduinoInstall.linux64 --dir=$HOME/arduino_ide/arduino
         
 notifications:
   email:
