--- a/.travis.yml
+++ b/.travis.yml
@@ -15,8 +15,8 @@ matrix:
         - export DISPLAY=:1.0
         - ./TeensyduinoInstall.linux64 --dir=$HOME/arduino_ide/arduino-$ARDUINO_IDE_VERSION
       script:
+       - examples=($(find $HOME/build/newdigate/teensy-blink -name "*.pde" -o -name "*.ino"))
        - 
-         examples=($(find $HOME/build/newdigate/teensy-blink -name "*.pde" -o -name "*.ino"))
          for example in "${examples[@]}"; do
            $HOME/arduino_ide/arduino-$ARDUINO_IDE_VERSION/arduino --verify --verbose --board "teensy:avr:teensy36:usb=serial,speed=180,opt=o2std,keys=en-us" $example
          done;
