--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,7 +3,8 @@ image: ubuntu
 before_script:
   - echo "Hello gitlab world!!!"
   - export ARDUINO_IDE_VERSION="1.8.8"
-  - apt-get install wget curl
+  - sudo apt-get update
+  - sudo apt-get install wget curl
   - wget --quiet https://downloads.arduino.cc/arduino-$ARDUINO_IDE_VERSION-linux64.tar.xz
   - mkdir $HOME/arduino_ide
   - tar xf arduino-$ARDUINO_IDE_VERSION-linux64.tar.xz -C $HOME/arduino_ide/ 
